Read/Search raw text file.  Create facade.

--- a/ab_oil_pressure_test/ab_oil_pressure_test/ab_oil_pressure_test.vcxproj
+++ b/ab_oil_pressure_test/ab_oil_pressure_test/ab_oil_pressure_test.vcxproj
@@ -19,7 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ab_oil_pressure_test.cpp" />
+    <ClCompile Include="facade.cpp" />
+    <ClCompile Include="licensee.cpp" />
+    <ClCompile Include="licensee_container.cpp" />
+    <ClCompile Include="mysql_facade.cpp" />
+    <ClCompile Include="source_ex.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="configuration.cpp" />
     <ClCompile Include="facade_interface.cpp" />
     <ClCompile Include="mysql_configuration.cpp" />
@@ -43,15 +48,29 @@
     <ClCompile Include="test_type_ex.cpp" />
     <ClCompile Include="txt_facade.cpp" />
     <ClCompile Include="txt_forward_list.cpp" />
+    <ClCompile Include="txt_key.cpp" />
+    <ClCompile Include="txt_parse.cpp" />
+    <ClCompile Include="txt_raw_facade.cpp" />
+    <ClCompile Include="txt_test.cpp" />
     <ClCompile Include="txt_read.cpp" />
     <ClCompile Include="txt_reader.cpp" />
+    <ClCompile Include="txt_record.cpp" />
+    <ClCompile Include="txt_record00.cpp" />
     <ClCompile Include="txt_write.cpp" />
     <ClCompile Include="xml_configuration.cpp" />
     <ClCompile Include="xml_mysql_configuration.cpp" />
     <ClCompile Include="xml_txt_configuration.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ab_oil_pressure_test.h" />
+    <ClInclude Include="facade.h" />
+    <ClInclude Include="key_container.h" />
+    <ClInclude Include="licensee.h" />
+    <ClInclude Include="licensee_container.h" />
+    <ClInclude Include="mysql_facade.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="source.h" />
+    <ClInclude Include="source_ex.h" />
+    <ClInclude Include="test.h" />
     <ClInclude Include="test_container.h" />
     <ClInclude Include="configuration.h" />
     <ClInclude Include="const_iterator_base.h" />
@@ -82,8 +101,14 @@
     <ClInclude Include="test_type_ex.h" />
     <ClInclude Include="txt_facade.h" />
     <ClInclude Include="txt_forward_list.h" />
+    <ClInclude Include="txt_key.h" />
+    <ClInclude Include="txt_parse.h" />
+    <ClInclude Include="txt_raw_facade.h" />
+    <ClInclude Include="txt_test.h" />
     <ClInclude Include="txt_read.h" />
     <ClInclude Include="txt_reader.h" />
+    <ClInclude Include="txt_record.h" />
+    <ClInclude Include="txt_record00.h" />
     <ClInclude Include="txt_write.h" />
     <ClInclude Include="xml_configuration.h" />
     <ClInclude Include="xml_mysql_configuration.h" />
@@ -91,6 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ab_oil_pressure_test.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -169,13 +197,14 @@
       <PreprocessorDefinitions>_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;WIN32;_DEBUG;NHILL_DZG_ABOPT_EXPORT;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <DisableSpecificWarnings>4251</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>$(SolutionDir)..\..\other\TiXml2\bin\$(Platform)\$(Configuration);../../../gemeinsam/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;log.lib;xml.lib;TiXml2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;log.lib;utility.lib;uwi.lib;xml.lib;TiXml2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -188,13 +217,14 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>C:\Program Files\MySQL\MySQL Connector C++ 8.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4251</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>$(SolutionDir)..\..\other\TiXml2\bin\$(Platform)\$(Configuration);../../../gemeinsam/bin/$(Platform)/$(Configuration);C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\vs14\debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;log.lib;xml.lib;TiXml2.lib;mysqlcppconn8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;log.lib;utility.lib;uwi.lib;xml.lib;TiXml2.lib;mysqlcppconn8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -208,6 +238,7 @@
       <PreprocessorDefinitions>_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;WIN32;NDEBUG;NHILL_DZG_ABOPT_EXPORT;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <DisableSpecificWarnings>4251</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -216,7 +247,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>$(SolutionDir)..\..\other\TiXml2\bin\$(Platform)\$(Configuration);../../../gemeinsam/bin/$(Platform)/$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;log.lib;xml.lib;TiXml2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;log.lib;utility.lib;uwi.lib;xml.lib;TiXml2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -231,6 +262,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>C:\Program Files\MySQL\MySQL Connector C++ 8.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4251</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -239,7 +271,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>$(SolutionDir)..\..\other\TiXml2\bin\$(Platform)\$(Configuration);../../../gemeinsam/bin/$(Platform)/$(Configuration);C:\Program Files\MySQL\MySQL Connector C++ 8.0\lib64\vs14;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>date_time.lib;enum.lib;uwi.lib;log.lib;xml.lib;TiXml2.lib;mysqlcppconn8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>date_time.lib;enum.lib;log.lib;utility.lib;uwi.lib;xml.lib;TiXml2.lib;mysqlcppconn8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
