--- a/ab_oil_pressure_test/ab_oil_pressure_test_test/ab_oil_pressure_test_test.vcxproj.filters
+++ b/ab_oil_pressure_test/ab_oil_pressure_test_test/ab_oil_pressure_test_test.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="licensee_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="field_index_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
